--- a/css/foundation.css
+++ b/css/foundation.css
@@ -4,8 +4,8 @@
 }
 
 .color1{
-    color:yellow;
-    background-color:black;
+    color:#000000;
+    background-color:#f8e71c;
 }
 .massive{
     font-size:5.125rem;
